k8s/admission-control.yaml
apiVersion: v1
kind: Service
metadata:
  name: l8collector-admission
  namespace: default
spec:
  selector:
    app: l8collector-admission
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 8443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: l8collector-admission
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: l8collector-admission
  template:
    metadata:
      labels:
        app: l8collector-admission
    spec:
      serviceAccountName: l8collector-admission
      containers:
        - name: admission
          image: saichler/probler-admission:latest
          imagePullPolicy: Always
          ports:
            - name: https
              containerPort: 8443
              protocol: TCP
          volumeMounts:
            - name: tls
              mountPath: /data
              readOnly: true
      volumes:
        - name: tls
          secret:
            secretName: l8collector-admission-tls
            items:
              - key: tls.crt
                path: admission.crt
              - key: tls.key
                path: admission.crtKey
