k8s/validating-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: l8collector-k8s
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: l8collector-admission
        namespace: default
        path: /admission/kubernetes
    failurePolicy: Ignore
    name: l8collector-k8s
    rules:
      - apiGroups:
          - apps
        apiVersions:
          - v1
        operations:
          - CREATE
          - DELETE
          - UPDATE
        resources:
          - daemonsets
      - apiGroups:
          - apps
        apiVersions:
          - v1
        operations:
          - CREATE
          - DELETE
          - UPDATE
        resources:
          - deployments
      - apiGroups:
          - apps
        apiVersions:
          - v1
        operations:
          - CREATE
          - DELETE
          - UPDATE
        resources:
          - statefulsets
      - apiGroups:
          - networking.k8s.io
        apiVersions:
          - v1
        operations:
          - CREATE
          - DELETE
          - UPDATE
        resources:
          - networkpolicies
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - DELETE
          - UPDATE
        resources:
          - namespaces
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - DELETE
          - UPDATE
        resources:
          - nodes
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - DELETE
          - UPDATE
        resources:
          - pods
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - DELETE
          - UPDATE
        resources:
          - services
    sideEffects: None
